@@ -1,1 +1,30 @@
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.h
+config.h.in
+config.log
+config.status
+config/compile
+config/ltmain.sh
+configure
+doc/Makefile
+doc/Makefile.in
+libtool
+scripts/Makefile
+scripts/Makefile.in
+scripts/sourceme.sh
+scripts/synapse-config
+src/.deps/
+src/.libs/
+src/Makefile
+src/Makefile.in
+src/libsynapse_backend.la
+src/libsynapse_frontend.la
+stamp-h1
+test/.deps/
+test/Makefile
+test/Makefile.in
 *.o
+*.lo
